--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="global.css">
 </head>
-<body>
+<body class="centralize">
     <form>
         <div class="form-field"> <!--onchange executa uma ação toda vez que o campo input é modificado
             pesquisar oninput-->
@@ -29,7 +29,7 @@
             <div class="error" id="password-required-error">Senha é obrigatória</div>
         </div>
         <div> <!--types: button(informa que o botao é clicável) ; submit(permite enviar informações de formulário para uma URL) and reset(reseta os campos e deixa eles vazios)-->
-            <button type="button" class="clear" id="recover-password-button" disabled="true">Recuperar Senha</button>
+            <button type="button" class="clear" id="recover-password-button" disabled="true" onclick="recoverPassword()">Recuperar Senha</button>
         </div>
         <div>
             <button type="button" class="solid" id="login-button" disabled="true" onclick="login()">Entrar</button>
@@ -38,8 +38,12 @@
             <button type="button" class="outline" onclick="register()">Registrar</button>
         </div>
     </form>
+    <!-- <div class="loading centralize"> atribui duas classes a mesma div
+        <label>Carregando...</label>
+    </div> -->
     <script src="index.js"></script>
     <script src="validations.js"></script>
+    <script src="loading.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
     <script>
