--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Expense Control</title>
+    <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="register.css">
 </head>
-<body>
-    Register    
+<body class="centralize">
+    <form>
+        <div class="form-field">
+            <div><label for="email">Email</label></div>
+            <input type="email" name="email" id="email" placeholder="seu@email.com"/>
+        </div>
+        <div class="form-field">
+            <div><label for="password">Senha</label></div>
+            <input type="password" name="password" id="password" placeholder="Senha"/>
+        </div>
+        <div class="form-field">
+            <div><label for="passwordConfirm">Confirmar senha</label></div>
+            <input type="password" name="passwordConfirm" id="passwordConfirm" placeholder="Confirmar senha"/>
+        </div>
+        <div>
+            <button type="button" class="solid">Registrar</button>
+        </div>
+        <div>
+            <button type="button" class="clear">Login</button>
+        </div>
+    </form>
 </body> 
 </html>
