--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -11,22 +11,49 @@
     <form>
         <div class="form-field">
             <div><label for="email">Email</label></div>
-            <input type="email" name="email" id="email" placeholder="seu@email.com"/>
+            <input type="email" name="email" id="email" placeholder="seu@email.com"
+                onchange="onChangeEmail()"/>
+            <div class="error" id="email-required-error">
+                Email é obrigatório
+            </div>
+            <div class="error" id="email-invalid-error">
+                Email é inválido
+            </div>
         </div>
         <div class="form-field">
             <div><label for="password">Senha</label></div>
-            <input type="password" name="password" id="password" placeholder="Senha"/>
+            <input type="password" name="password" id="password" placeholder="Senha"
+                onchange="onChangePassword()"/>
+            <div class="error" id="password-required-error">
+                Senha é obrigatória
+            </div>
+            <div class="error" id="password-min-length-error">
+                Senha deve ter pelo menos 6 caracteres
+            </div>
         </div>
         <div class="form-field">
-            <div><label for="passwordConfirm">Confirmar senha</label></div>
-            <input type="password" name="passwordConfirm" id="passwordConfirm" placeholder="Confirmar senha"/>
+            <div><label for="confirmPassword">Confirmar senha</label></div>
+            <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirmar senha"
+                onchange="onChangeConfirmPassword()"/>
+            <div class="error" id="password-doesnt-match-error">
+                Senha e Confirmar Senha devem ser iguais
+            </div>
         </div>
         <div>
-            <button type="button" class="solid">Registrar</button>
+            <button type="button" class="solid" disabled="true" 
+                onclick="register()" id="register-button">
+                Registrar
+            </button>
         </div>
         <div>
             <button type="button" class="clear">Login</button>
         </div>
     </form>
 </body> 
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
+<script src="../../firebase-init.js"></script>
+<script src="register.js"></script>
+<script src="../../validations.js"></script>
+<script src="../../loading.js"></script>
 </html>
